[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.black]
line-length = 120

[tool.coverage]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true
skip_empty = true

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
parallel = true
source = ["src"]

[tool.flake8]
docstring_style = "google"
exclude = [".git", ".venv", "__pycache__", "build", "dist", "setup.py"]
ignore = "B506 D100 D104 S101"
max-complexity = 10
max_line_length = 120
per-file-ignores = "tests/*.py: S101 DAR101"
strictness = "full"

[tool.isort]
atomic = true
force_single_line = true
include_trailing_comma = true
line_length = 120
profile = "black"

[tool.mypy]
exclude = ".venv"
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true

[tool.poetry]
authors = ["Tory Clasen <ToryClasen@Gmail.com>"]
description = "Dramatiq-Mongodb Broker and Results Backend for Dramatiq"
include = ["CHANGELOG.md"]
license = "MIT"
name = "dramatiq-mongodb"
readme = "README.md"
repository = "https://github.com/obscuritylabs/dramatiq-mongodb"
version = "0.7.1"

[tool.poetry.dependencies]
dramatiq = "^1.12.1"
pymongo = ">=4.1,<5"
python = ">=3.7,<4"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.4"
black = "^22.3.0"
commitizen = "^2.23.0"
darglint = "^1.8.1"
dlint = "^0.12.0"
dramatiq = {extras = ["watch"], version = "^1.13.0"}
flake8-bugbear = "^22.3.23"
flake8-docstrings = "^1.6.0"
flake8-pep518 = "^0.1.0"
isort = "^5.10.1"
mypy = "^0.942"
pre-commit = "^2.17.0"
pytest = "^7.1.1"
pytest-clarity = "^1.0.1"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.4"
pytest-xdist = "^3.1.0"
python-semantic-release = "^7.27.0"
safety = "^2.3.5"
vulture = "^2.3"

[tool.pytest]

[tool.pytest.ini_options]
addopts = "--no-header -p no:warnings -ra -q --cov=src/"
norecursedirs = [".*", "*.egg", "build", "dist"]
testpaths = ["tests/"]

[tool.semantic_release]
branch = "main"
build_command = "poetry build -n"
commit_subject = "bump: release {version}"
major_on_zero = false
pre_commit_command = "poetry run pre-commit run --all-files"
upload_to_PyPI = true
upload_to_release = false
version_variable = [
  "src/dramatiq_mongodb/__init__.py:__version__",
  "pyproject.toml:version",
]

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]
sort_by_size = true
verbose = true
